// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExitSignUpStep > renders the ExitSignUpStep component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="exit-sign-up-step"
      >
        <img
          alt="blob men girl"
          class="exit-sign-up-step__img"
          src="/src/assets/images/blob-men-girl.svg"
        />
        <p
          class="exit-sign-up-step__label"
        >
          WELCOME
        </p>
        <p
          class="exit-sign-up-step__label-first"
        >
          START_YOUR_FIRST_PROGRAM
        </p>
        <p
          class="exit-sign-up-step__label-profile"
        >
          COMPLITED_NEXT_TIME_PROFILE
        </p>
        <button
          class="basic-button exit-sign-up-step__btn basic-button--basic"
          type="button"
        >
          DISCOVERY_PROGRAMS
        </button>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="exit-sign-up-step"
    >
      <img
        alt="blob men girl"
        class="exit-sign-up-step__img"
        src="/src/assets/images/blob-men-girl.svg"
      />
      <p
        class="exit-sign-up-step__label"
      >
        WELCOME
      </p>
      <p
        class="exit-sign-up-step__label-first"
      >
        START_YOUR_FIRST_PROGRAM
      </p>
      <p
        class="exit-sign-up-step__label-profile"
      >
        COMPLITED_NEXT_TIME_PROFILE
      </p>
      <button
        class="basic-button exit-sign-up-step__btn basic-button--basic"
        type="button"
      >
        DISCOVERY_PROGRAMS
      </button>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ExitSignUpStep > renders the ExitSignUpStep component with is completed 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="exit-sign-up-step"
      >
        <img
          alt="blob men girl"
          class="exit-sign-up-step__img"
          src="/src/assets/images/blob-men-girl.svg"
        />
        <p
          class="exit-sign-up-step__label"
        >
          WELCOME
        </p>
        <p
          class="exit-sign-up-step__label-first"
        >
          START_YOUR_FIRST_PROGRAM
        </p>
        <button
          class="basic-button exit-sign-up-step__btn basic-button--basic"
          type="button"
        >
          DISCOVERY_PROGRAMS
        </button>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="exit-sign-up-step"
    >
      <img
        alt="blob men girl"
        class="exit-sign-up-step__img"
        src="/src/assets/images/blob-men-girl.svg"
      />
      <p
        class="exit-sign-up-step__label"
      >
        WELCOME
      </p>
      <p
        class="exit-sign-up-step__label-first"
      >
        START_YOUR_FIRST_PROGRAM
      </p>
      <button
        class="basic-button exit-sign-up-step__btn basic-button--basic"
        type="button"
      >
        DISCOVERY_PROGRAMS
      </button>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
